PLANET-6828 Fix Covers carousel layout in Safari
Before this fix, covers would not scroll

--- a/assets/src/styles/blocks/Covers/layouts/CoversCarouselLayout.scss
+++ b/assets/src/styles/blocks/Covers/layouts/CoversCarouselLayout.scss
@@ -18,10 +18,6 @@
     &::-webkit-scrollbar {
       display: none;
     }
-
-    @include large-and-up {
-      overflow-x: hidden;
-    }
   }
 
   .carousel-control-prev,
